// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly variant beta 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffefe6;
  color: #ff8c69;
}

.emotion-4 {
  fill: #ff8c69;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ff8c69;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant info 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #e4edff;
  color: #3f6ed8;
}

.emotion-4 {
  fill: #3f6ed8;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #3f6ed8;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #3f6ed8;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant success 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #cdfcf1;
  color: #45d6b5;
}

.emotion-4 {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #45d6b5;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #45d6b5;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant warning 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ef5774;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ef5774;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with custom icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ef5774;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ef5774;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ef5774;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ef5774;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with title 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  color: #ef5774;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ef5774;
}

.emotion-13 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ef5774;
}

.emotion-13.emotion-13 {
  margin-left: 16px;
  color: #ef5774;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        title
      </p>
      <p
        class="emotion-9 emotion-13 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly without background 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
  background-color: transparent;
}

.emotion-4 {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ef5774;
}

.emotion-10.emotion-10 {
  margin-left: 16px;
  color: #ef5774;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <svg
      class="sc-ui-icon emotion-3 emotion-4 emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="emotion-6 emotion-7 emotion-2"
    >
      <p
        class="emotion-9 emotion-10 emotion-2"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;
